--- a/index.html
+++ b/index.html
@@ -1,12 +1,65 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Point One Integrated Tech.</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <title>Point One Integrated Tech., Inc.</title>
 </head>
 <body>
-    <h1 class="text-3xl font-bold underline">Point One Integrated Tech.</h1>
+    <!-- Navigation Bar -->
+    <img src="Assets/logo.png" alt="LOGO" id="logo">
+    <div class="navbar">
+        <a href="#blob"><div class="line"></div>HOME</a>
+        <a href="#"><div class="line"></div>SERVICES</a>
+        <a href="#"><div class="line"></div>PRODUCTS</a>
+        <a href="#"><div class="line"></div>PRICING</a>
+        <a href="#"><div class="line"></div>TEAM</a>
+        <a href="#footer"><div class="line"></div>CONTACT</a>
+    </div>
+
+    <img src="Assets/blob.png" alt="BLOB" id="blob">
+    <button id="inquire"><a href="#inquiries">INQUIRE NOW</a></button>
+
+    <div class="container">
+        <h1 class="txt">WE ARE BUILDING</h1>
+        <h1 class="txt">SOFTWARE</h1>
+        <h1 class="txt">TO HELP</h1>
+    </div>
+
+    <img src="Assets/Element 1.png" alt="PC" id="pc">
+
+    <!-- About us -->
+    <div class="container2">
+        <p class="abt">About Us</p>
+        <div class="line2"></div>
+        <p class="desc">
+            Established in 2013, Point One Integrated Technologies, Inc., a local software company in the Philippines that provides a wide-range of software and system development services for small, medium and large enterprise introducing a fresh and innovative approach to system automation. We offer affordable yet effective and efficient solutions. Our extensive skills includes all aspects of implementation and operation, from business requirements definition, development of functional specifications, system design, and software customization to fit specific client needs.
+        </p>
+    </div>
+
+    <!-- Inquiries -->
+    <div class="inqcontainer" id="inquiries">
+        <img src="Assets/logo text.png" alt="LOGO" id="text-logo">
+        <h1 id="inqsec">INQUIRE NOW</h1>
+        <div class="input-grp">
+            <input type="text" id="input" placeholder="Get in touch">
+            <input type="submit" id="submit" value="SUBMIT">
+        </div>
+    </div>
+
+    <!-- Footer/Contact -->
+    <div class="footer" id="footer"></div>
+    <div class="container3">
+        <p id="fbold">ADDRESS</p>
+            <p id="freg">UG4 Valley Fair Town Center, Ortigas Extension Ave., Taytay Rizal 1920</p>
+
+        <p id="fbold2">MAIL</p>
+            <p id="freg2">support@pointonesolutions.com.ph</p>
+    </div>
+
 </body>
 </html>
