fix file destination

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="CSS/stylesheet.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -11,7 +11,7 @@
 </head>
 <body>
     <!-- Navigation Bar -->
-    <img src="Assets/logo.png" alt="LOGO" id="logo">
+    <img src="MEDIA/Assets/logo.png" alt="LOGO" id="logo">
     <div class="navbar">
         <a href="#blob"><div class="line"></div>HOME</a>
         <a href="#"><div class="line"></div>SERVICES</a>
@@ -21,7 +21,7 @@
         <a href="#footer"><div class="line"></div>CONTACT</a>
     </div>
 
-    <img src="Assets/blob.png" alt="BLOB" id="blob">
+    <img src="MEDIA/Assets/blob.png" alt="BLOB" id="blob">
     <button id="inquire"><a href="#inquiries">INQUIRE NOW</a></button>
 
     <div class="container">
@@ -30,7 +30,7 @@
         <h1 class="txt">TO HELP</h1>
     </div>
 
-    <img src="Assets/Element 1.png" alt="PC" id="pc">
+    <img src="MEDIA/Assets/Element 1.png" alt="PC" id="pc">
 
     <!-- About us -->
     <div class="container2">
@@ -43,7 +43,7 @@
 
     <!-- Inquiries -->
     <div class="inqcontainer" id="inquiries">
-        <img src="Assets/logo text.png" alt="LOGO" id="text-logo">
+        <img src="MEDIA/Assets/logo text.png" alt="LOGO" id="text-logo">
         <h1 id="inqsec">INQUIRE NOW</h1>
         <div class="input-grp">
             <input type="text" id="input" placeholder="Get in touch">
