--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="icon" type="icon/png" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRAG7E79XCwzazFFr2rreTCJhHj0PwgYhfYAVLYWdmDbQGwxeEipEDzClQ-GKZTwAg7uoU&usqp=CAU"> 
     <title>Point One Integrated Tech., Inc.</title>
 </head>
 <body>
