--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <script src="JS/global.js" defer></script>
+    <script src="JS/form.js" defer></script>
     <title>Point One Integrated Tech., Inc.</title>
 </head>
 <body>
@@ -47,10 +48,10 @@
                     </div>
                 </div>
                 <div class="form-subsection">
-                    <h3>Inquire Now</h3>
                     <form action="">
+                        <h3>Inquire Now</h3>
                         <div class="form-items">
-                            <div class="form-item">
+                            <div class="form-item">        
                                 <label for="name-input">Name:</label>
                                 <input type="text" id="name-input" required>
                             </div>
